--- a/freefire.html
+++ b/freefire.html
@@ -30,9 +30,9 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="./freefire.html" target="_blank">Free Fire</a></li>
-            <li><a href="./valorant.html" target="_blank">Valorant</a></li>
-            <li><a href="./standoff.html" target="_blank">Standoff 2</a></li>
+            <li><a href="./index.html">Piolho Community</a></li>
+            <li><a href="./valorant.html">Valorant</a></li>
+            <li><a href="./standoff.html">Standoff 2</a></li>
           </ul>
         </nav>
       </header>
@@ -48,11 +48,9 @@
             <img src="./assets/freefire.png" width="400px">
 
             <p>
-                O Otimizador v2.2 é umas pastas para manter o desempenho do seu computador em alta. Realiza uma série de tarefas que ajudam a melhorar a velocidade e a eficiência do sistema.
-            </p>
-
-            <div>
-                <a href="https://fir3.net/TRzl" target="_blank">Download</a>
+                Se você é fã de Free Fire e quer garantir que seu dispositivo esteja sempre preparado para as batalhas mais intensas, o Otimizador Piolho é a solução perfeita.</p>
+        <div>
+                <a href="https://www.mediafire.com/file/hund68t3cf9u1lr/Otimiza%25C3%25A7%25C3%25A3o_free_fire_piolho.rar/file" target="_blank">Download</a>
             </div>
         </div>
     </main>
@@ -65,12 +63,12 @@
     
 
     <article class="OneDragon">
-        <img src="./assets/emulador.png" style="
+        <img src="./assets/ProductLogo.png" style="
         border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;" />
         <div>
-            <name> One Dragon 4.240 - Piolho </name>
+            <name> Ultra God - Ant Crash 4.240 - DEEX TV </name>
             <p>
-                Melhor emulador para desempenho e sensibilidade de free fire
+                Melhor emulador para desempenho e sensibilidade de free fire, Ultra God DEXX TV
             </p>
         </div>
     </article>
@@ -86,27 +84,27 @@
         <div>
             <name> BSTweaker 5</name>
             <p>
-                BSTweaker 5 para usar com emuladores versão 4 do bluestacks
+                BSTweaker 6 para usar com emuladores versão 5 do bluestacks/Msi
             </p>
         </div>
     </article>
-    <a href="https://www.mediafire.com/file/d83af5bs6jposxy/Brainly_5.160.0_Mod_TIA_PREMIUM.apk/file"><button class="button type1">
+    <a href="https://www.mediafire.com/file/2dg7je5gg1dbz5r/BSTweaker_Msi_5.rar/file"><button class="button type1">
         <span class="btn-txt">Download</span>
     </button></a>
 
 
 
     <article>
-        <img src="./assets/bluestacks-tweaker220-220.png" style="
+        <img src="./assets/logotipo-limpeza-simbolo-desenho-vetorial-700-79376554-removebg-preview.png" style="
         border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;" />
         <div>
-            <name> Painel Piolho </name>
+            <name> Limpar Emulador </name>
             <p>
-                Painel para otimizar seu sistema de 1 em 1 semana
+                Limpar 100% do seu emulador sem deixar nenhum residuo.
             </p>
         </div>
     </article>
-    <a href="https://www.mediafire.com/file/d83af5bs6jposxy/Brainly_5.160.0_Mod_TIA_PREMIUM.apk/file"><button class="button type1">
+    <a href="https://www.mediafire.com/file/aapwvctk65t4wgl/limpar_residuos.zip/file"><button class="button type1">
         <span class="btn-txt">Download</span>
     </button></a>
 
@@ -128,19 +126,18 @@
     <div class="preloader" id="preloader">
         <div class="loader" id="loader"></div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
 
 
-  <footer class="inherited-styles-for-exported-element">
-      <div>
-        <img  href="https://www.instagram.com/slo._.004/" src="./assets/image.png" width="60" style="border-radius: 20px; border: 2px solid rgba(255, 0, 0, 0.185);">
-        <p style="margin-bottom: .5em; color: rgba(255, 0, 0, 0.336);">Piolho Cabuloso</p>
-      </div>
-  </footer>
-  
-  
+
 
 
 
