--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
     <header>
         <nav>
-          <img class="logo" src="./assets/Otimização (1).png">
+          <img href="./index.html" class="logo" src="./assets/Otimização (1).png">
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="./freefire.html" target="_blank"> Free Fire</a></li>
-            <li><a href="./valorant.html" target="_blank">Valorant</a></li>
-            <li><a href="./standoff.html" target="_blank">Standoff 2</a></li>
+            <li><a href="./freefire.html">Free Fire</a></li>
+            <li><a href="./valorant.html">Valorant</a></li>
+            <li><a href="./standoff.html">Standoff 2</a></li>
           </ul>
         </nav>
       </header>
@@ -74,59 +74,50 @@
     
 
     <article class="OneDragon">
-        <img src="./assets/emulador.png" style="
+        <img src="./assets/Otimização__4_-removebg-preview.png" style="
         border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;" />
         <div>
-            <name> One Dragon 4.240 - Piolho </name>
+            <name> Painel Semanal </name>
             <p>
-                Melhor emulador para desempenho e sensibilidade de free fire
+                Apresentamos o Otimizador Semanal, a solução perfeita para quem busca maximizar a produtividade e organizar suas semanas de forma eficiente.
             </p>
         </div>
     </article>
-    <a href="https://www.mediafire.com/file/d83af5bs6jposxy/Brainly_5.160.0_Mod_TIA_PREMIUM.apk/file"><button class="button type1">
+    <a href="https://www.mediafire.com/file/i3bfg21a1pyc30y/Otima%25C3%25A7%25C3%25A3o_semanal.rar/file" target="_blank"><button class="button type1">
         <span class="btn-txt" >Download</span>
     </button></a>
 
 
 
     <article>
-        <img src="./assets/bluestacks-tweaker220-220.png" style="
+        <img src="./assets/logo.png" style="
         border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;" />
         <div>
-            <name> BSTweaker 5</name>
+            <name> Painel Piolho v3</name>
             <p>
-                BSTweaker 5 para usar com emuladores versão 4 do bluestacks
+                Apresentamos nosso Painel v3 de Otimização, a ferramenta definitiva para elevar o desempenho do seu sistema e garantir mais FPS nos seus jogos favoritos. Com nosso painel, você poderá ajustar configurações avançadas, eliminar processos desnecessários e otimizar recursos, tudo de forma rápida e intuitiva.
             </p>
         </div>
     </article>
-    <a href="https://www.mediafire.com/file/d83af5bs6jposxy/Brainly_5.160.0_Mod_TIA_PREMIUM.apk/file"><button class="button type1">
-        <span class="btn-txt">Download</span>
+    <a href="https://discord.gg/y8MYyMCNQA" target="_blank"><button class="button type1">
+        <span class="btn-txt">Comprar</span>
     </button></a>
 
 
 
     <article>
-        <img src="./assets/bluestacks-tweaker220-220.png" style="
-        border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;" />
+        <img src="./assets/Otimização__3_-removebg-preview.png" style="
+        border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;"/>
         <div>
             <name> Painel Piolho </name>
             <p>
-                Painel para otimizar seu sistema de 1 em 1 semana
+                Apresentamos o Painel Gratuito de Otimização, a solução ideal para melhorar o desempenho do seu sistema operacional sem custo algum.
             </p>
         </div>
     </article>
-    <a href="https://www.mediafire.com/file/d83af5bs6jposxy/Brainly_5.160.0_Mod_TIA_PREMIUM.apk/file"><button class="button type1">
+    <a href="https://www.mediafire.com/file/07jen4ct1upfq2b/Painel_Gr%25C3%25A1tis.rar/file" target="_blank"><button class="button type1">
         <span class="btn-txt">Download</span>
     </button></a>
-
-
-
-
-
-
-
-
-
 
 
     <a href="https://discord.gg/2zdpdqQYtX" target="_blank"><button class="whatzapp">
@@ -137,24 +128,12 @@
     <div class="preloader" id="preloader">
         <div class="loader" id="loader"></div>
   </div>
-
-
-
-
-
-  <footer class="inherited-styles-for-exported-element">
-      <div>
-        <img  href="https://www.instagram.com/slo._.004/" src="./assets/image.png" width="60" style="border-radius: 20px; border: 2px solid rgba(255, 0, 0, 0.185);">
-        <p style="margin-bottom: .5em; color: rgba(255, 0, 0, 0.336);">Piolho Cabuloso</p>
-      </div>
-  </footer>
-  
-  
-
-
-
-
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
   
 
