--- a/valorant.html
+++ b/valorant.html
@@ -30,20 +30,12 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="./freefire.html" target="_blank">Free Fire</a></li>
-            <li><a href="./valorant.html" target="_blank">Valorant</a></li>
-            <li><a href="./standoff.html" target="_blank">Standoff 2</a></li>
+            <li><a href="./index.html">Piolho Community</a></li>
+            <li><a href="./freefire.html">Free Fire</a></li>
+            <li><a href="./standoff.html">Standoff 2</a></li>
           </ul>
         </nav>
       </header>
-
-    <div class="notification" id="notification" onclick="fechar()" data-aos="fade-right">
-        <div class="notiglow"></div>
-        <div class="notiborderglow"></div>
-        <div class="notititle"><b>Seja bem vindo!</b></div>
-        <div class="notibody"><b>Prepare-se para uma jornada com nossos otimizadores! 💻🐱‍🏍</b></div>
-    </div>
-
 
 
     <div id="background">
@@ -57,7 +49,7 @@
             <img data-aos="fade-up " data-aos-duration="800 " data-aos-easing="ease-in-out " src="./assets/valorant.png" width="400px">
 
             <p data-aos="fade-up " data-aos-delay="300 " data-aos-duration="800 " data-aos-easing="ease-in-out ">
-                O Otimizador v2.2 é umas pastas para manter o desempenho do seu computador em alta. Realiza uma série de tarefas que ajudam a melhorar a velocidade e a eficiência do sistema.
+                Se você é um jogador de Valorant e busca a máxima performance no seu PC, o Otimizador é a ferramenta ideal para você. Projetado para eliminar lag e aumentar a fluidez do jogo, este otimizador garante que você esteja sempre um passo à frente dos seus adversários.
             </p>
 
             <div data-aos="fade-up " data-aos-delay="600 " data-aos-duration="800 " data-aos-easing="ease-in-out ">
@@ -137,19 +129,14 @@
     <div class="preloader" id="preloader">
         <div class="loader" id="loader"></div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
-
-
-
-  <footer class="inherited-styles-for-exported-element">
-      <div>
-        <img  href="https://www.instagram.com/slo._.004/" src="./assets/image.png" width="60" style="border-radius: 20px; border: 2px solid rgba(255, 0, 0, 0.185);">
-        <p style="margin-bottom: .5em; color: rgba(255, 0, 0, 0.336);">Piolho Cabuloso</p>
-      </div>
-  </footer>
-  
-  
 
 
 
