--- a/standoff.html
+++ b/standoff.html
@@ -30,9 +30,9 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="./freefire.html" target="_blank">Free Fire</a></li>
-            <li><a href="./valorant.html" target="_blank">Valorant</a></li>
-            <li><a href="./standoff.html" target="_blank">Standoff 2</a></li>
+            <li><a href="./index.html">Piolho Community</a></li>
+            <li><a href="./freefire.html">Free Fire</a></li>
+            <li><a href="./valorant.html">Valorant</a></li>
           </ul>
         </nav>
       </header>
@@ -49,8 +49,7 @@
             <img data-aos="fade-up " data-aos-duration="800 " data-aos-easing="ease-in-out " src="./assets/standoff.png" width="400px">
 
             <p data-aos="fade-up " data-aos-delay="300 " data-aos-duration="800 " data-aos-easing="ease-in-out ">
-                O Otimizador v2.2 é umas pastas para manter o desempenho do seu computador em alta. Realiza uma série de tarefas que ajudam a melhorar a velocidade e a eficiência do sistema.
-            </p>
+                Experimente o Otimizador Standoff 2 Piolho e sinta a diferença na sua performance em Standoff. Jogue sem gargalos e comande o campo de batalha com autoridade e precisão!            </p>
 
             <div data-aos="fade-up " data-aos-delay="600 " data-aos-duration="800 " data-aos-easing="ease-in-out ">
                 <a href="https://fir3.net/TRzl" target="_blank">Download</a>
@@ -116,11 +115,6 @@
 
 
 
-
-
-
-
-
     <a href="https://discord.gg/2zdpdqQYtX" target="_blank"><button class="whatzapp">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19.27 5.33C17.94 4.71 16.5 4.26 15 4a.09.09 0 0 0-.07.03c-.18.33-.39.76-.53 1.09a16.09 16.09 0 0 0-4.8 0c-.14-.34-.35-.76-.54-1.09c-.01-.02-.04-.03-.07-.03c-1.5.26-2.93.71-4.27 1.33c-.01 0-.02.01-.03.02c-2.72 4.07-3.47 8.03-3.1 11.95c0 .02.01.04.03.05c1.8 1.32 3.53 2.12 5.24 2.65c.03.01.06 0 .07-.02c.4-.55.76-1.13 1.07-1.74c.02-.04 0-.08-.04-.09c-.57-.22-1.11-.48-1.64-.78c-.04-.02-.04-.08-.01-.11c.11-.08.22-.17.33-.25c.02-.02.05-.02.07-.01c3.44 1.57 7.15 1.57 10.55 0c.02-.01.05-.01.07.01c.11.09.22.17.33.26c.04.03.04.09-.01.11c-.52.31-1.07.56-1.64.78c-.04.01-.05.06-.04.09c.32.61.68 1.19 1.07 1.74c.03.01.06.02.09.01c1.72-.53 3.45-1.33 5.25-2.65c.02-.01.03-.03.03-.05c.44-4.53-.73-8.46-3.1-11.95c-.01-.01-.02-.02-.04-.02M8.52 14.91c-1.03 0-1.89-.95-1.89-2.12s.84-2.12 1.89-2.12c1.06 0 1.9.96 1.89 2.12c0 1.17-.84 2.12-1.89 2.12m6.97 0c-1.03 0-1.89-.95-1.89-2.12s.84-2.12 1.89-2.12c1.06 0 1.9.96 1.89 2.12c0 1.17-.83 2.12-1.89 2.12"/></svg>
     </button></a>
@@ -129,19 +123,19 @@
     <div class="preloader" id="preloader">
         <div class="loader" id="loader"></div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
 
 
-  <footer class="inherited-styles-for-exported-element">
-      <div>
-        <img  href="https://www.instagram.com/slo._.004/" src="./assets/image.png" width="60" style="border-radius: 20px; border: 2px solid rgba(255, 0, 0, 0.185);">
-        <p style="margin-bottom: .5em; color: rgba(255, 0, 0, 0.336);">Piolho Cabuloso</p>
-      </div>
-  </footer>
-  
-  
+
+
 
 
 
